@@ -1,20 +1,20 @@
 package com.evature.search.controllers.activities;
 
-import java.util.List;
-
 import roboguice.activity.RoboMapActivity;
+import roboguice.inject.InjectFragment;
 import roboguice.inject.InjectResource;
-import roboguice.inject.InjectView;
+import android.app.Dialog;
 import android.content.Intent;
 import android.graphics.drawable.Drawable;
 import android.os.Bundle;
 
 import com.evature.search.R;
 import com.evature.search.views.HotelItemizedOverlay;
+import com.google.android.gms.common.ConnectionResult;
+import com.google.android.gms.common.GooglePlayServicesUtil;
+import com.google.android.gms.maps.MapFragment;
 import com.google.android.maps.GeoPoint;
 import com.google.android.maps.MapController;
-import com.google.android.maps.MapView;
-import com.google.android.maps.Overlay;
 import com.google.android.maps.OverlayItem;
 
 public class HotelMapActivity extends RoboMapActivity {
@@ -25,15 +25,16 @@ public class HotelMapActivity extends RoboMapActivity {
     public static String HOTEL_LONGITUDE="LONGITUDE";
 	private MapController myMapController;
 	
-	@InjectView(R.id.mapview) MapView mapView;
 	@InjectResource(R.drawable.hotel_ico)  Drawable hotelIcon;
 
 	@Override
     public void onCreate(Bundle savedInstanceState) {
         super.onCreate(savedInstanceState);
         setContentView(R.layout.hotel_map);
-        mapView.setBuiltInZoomControls(true);
-        List<Overlay> mapOverlays = mapView.getOverlays();
+
+        MapFragment mapFragment = (MapFragment) getFragmentManager().findFragmentById(R.id.map);
+//        mapView.setBuiltInZoomControls(true);
+//        List<Overlay> mapOverlays = mapView.getOverlays();
         
         HotelItemizedOverlay itemizedoverlay = new HotelItemizedOverlay(hotelIcon, this);
         Intent intent = getIntent();
@@ -44,19 +45,28 @@ public class HotelMapActivity extends RoboMapActivity {
         String latitudeString = extras.getString(HOTEL_LATITUDE);
         String city = extras.getString(HOTEL_CITY);
         
-        int longitude=new Integer(longitudeString).intValue();
-        int latitude=new Integer(latitudeString).intValue();
+        int longitude= Integer.valueOf(longitudeString);
+        int latitude= Integer.valueOf(latitudeString);
         
-        GeoPoint point = new GeoPoint((int)latitude,(int)longitude);
+        GeoPoint point = new GeoPoint(latitude,longitude);
         OverlayItem overlayitem = new OverlayItem(point, city,name);
         itemizedoverlay.addOverlay(overlayitem);
-        mapOverlays.add(itemizedoverlay);
-        myMapController = mapView.getController();
-        myMapController.animateTo(point);
-        int spanLong = 10000;
-        int spanLat = 10000;
-        myMapController.zoomToSpan(spanLong, spanLat) ;
+//        mapOverlays.add(itemizedoverlay);
+//        myMapController = mapView.getController();
+//        myMapController.animateTo(point);
+//        int spanLong = 10000;
+//        int spanLat = 10000;
+//        myMapController.zoomToSpan(spanLong, spanLat) ;
     }
+	
+	@Override
+	public void onResume() {
+		int errCode = GooglePlayServicesUtil.isGooglePlayServicesAvailable(this);
+		if (errCode != ConnectionResult.SUCCESS) {
+			Dialog errorDialog = GooglePlayServicesUtil.getErrorDialog(errCode, this, 0);
+			errorDialog.show();
+		}
+	}
 
     @Override
     protected boolean isRouteDisplayed() {
